admin fix dark mode

--- a/packages/access-management/page-components/PermissionList/ModulesPermissions/Navigations/Navigation/Permissions/styles.module.css
+++ b/packages/access-management/page-components/PermissionList/ModulesPermissions/Navigations/Navigation/Permissions/styles.module.css
@@ -3,7 +3,6 @@
 	margin-bottom: 8px;
 	margin-left: 16px;
 	font-size: 10px;
-	color: #828282;
 }
 
 .group_container {
